@@ -262,6 +262,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6459: distutils.command.build_ext.get_export_symbols now uses the 
+  "PyInit" prefix, rather than "init". 
+
 - Issue #6455: Fixed test_build_ext under win32. 
 
 - Issue #6403: Fixed package path usage in build_ext.
